--- a/src/components/ProgressBar/ProgressBar.stories.mdx
+++ b/src/components/ProgressBar/ProgressBar.stories.mdx
@@ -1,5 +1,5 @@
-import { Meta, Story } from '@storybook/addon-docs/blocks';
-import ProgressBar from './ProgressBar';
+import { Meta, Story } from "@storybook/addon-docs/blocks";
+import ProgressBar from "./ProgressBar";
 
 <Meta
   title="ProgressBar"
@@ -7,15 +7,23 @@ import ProgressBar from './ProgressBar';
   argTypes={{
     value: {
       control: {
-        type: 'number',
-        min: 0,
-        max: 100,
+        type: "number",
+      },
+    },
+    min: {
+      control: {
+        type: "number",
+      },
+    },
+    max: {
+      control: {
+        type: "number",
       },
     },
     size: {
       control: {
-        type: 'select',
-        options: ['small', 'medium', 'large'],
+        type: "select",
+        options: ["small", "medium", "large"],
       },
     },
   }}
@@ -25,6 +33,6 @@ export const Template = (args) => <ProgressBar {...args} />;
 
 # ProgressBar
 
-<Story name="Default" args={{ value: 50, size: 'medium' }}>
+<Story name="Default" args={{ value: 50, size: "medium" }}>
   {Template.bind({})}
 </Story>
